<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
    <modelVersion>4.1.0</modelVersion>

    <parent>
        <groupId>network.ike</groupId>
        <artifactId>ike-parent</artifactId>
        <version>47</version>
        <relativePath/>
    </parent>

    <groupId>dev.ikm.tinkar</groupId>
    <artifactId>tinkar-core</artifactId>
    <version>1.127.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>IKM tinkar core</name>
    <description>
        Tinkar-core is a java software project that aims to provides a reference implementation
        for the open-source HL7 Tinkar informational Ballot.
        Tinkar and its underlining data model serves as a self-describing terminology model
        that can be used to harmonize other standards based models.
    </description>
    <url>http://www.ikm.dev</url>
    <inceptionYear>2015</inceptionYear>
    <organization>
        <name>Integrated Knowledge Management</name>
        <url>http://www.ikm.dev</url>
    </organization>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>ikmdev</id>
            <name>IKM Development Team</name>
            <email>support@ikm.dev</email>
        </developer>
    </developers>

    <subprojects>
        <subproject>collection</subproject>
        <subproject>common</subproject>
        <subproject>component</subproject>
        <subproject>entity</subproject>
        <subproject>language-extensions</subproject>
        <subproject>terms</subproject>
        <subproject>provider</subproject>
        <subproject>reasoner</subproject>
        <subproject>integration</subproject>
        <subproject>aggregator</subproject>
        <subproject>events</subproject>
        <subproject>tinkar-bom</subproject>
    </subprojects>

    <scm>
        <url>http://www.github.com/ikmdev/tinkar-core</url>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/ikmdev/tinkar-core/issues</url>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <snomedct-data.version>2023.09.01</snomedct-data.version>
        <tinkar-starter-data.version>20251009</tinkar-starter-data.version>
        <tinkar-example-data.version>1.2.0+1.2.2</tinkar-example-data.version>
        <sonar.skip>false</sonar.skip>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
        <sonar.language>java</sonar.language>
        <maven.sonarqube.version>5.5.0.6356</maven.sonarqube.version>
        <maven-jxr-plugin.version>3.6.0</maven-jxr-plugin.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <tinkar-bindings.version>1.4.0</tinkar-bindings.version>

        <maven.github-flow.version>1.21.1-r11</maven.github-flow.version>
        <maven.versions.plugin>2.19.1</maven.versions.plugin>
    </properties>

    <!-- All Dependencies and versions used in this project are pre-defined here for use in modules -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.ikm.ike</groupId>
                <artifactId>ike-bom</artifactId>
                <version>3.0.7-feature-test-v66-SNAPSHOT</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <!-- Cross project dependencies -->
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-console</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>common-java5</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-gpg-plugin</artifactId>
                    <version>3.2.8</version>
                    <configuration>
                        <signer>bc</signer>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm</artifactId>
                            <version>${asm.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm-commons</artifactId>
                            <version>${asm.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm-tree</artifactId>
                            <version>${asm.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.ow2.asm</groupId>
                            <artifactId>asm-util</artifactId>
                            <version>${asm.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven.assembly.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <!-- for site generation -->
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven-jxr-plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>
</project>
